tests/NormalTests/paczka1/small_fuzzy/44192293.err
Error in line 1: KxpHohoEC7 S@2@ 44,2
Error in line 8: h5DiHd A115 92,4
